Bug 435945 - Kate complains about being unable to find a .git file in an svn repo
Summary: Kate complains about being unable to find a .git file in an svn repo
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.03.90
Platform: Arch Linux Other
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-20 03:54 UTC by Kishore Gopalakrishnan
Modified: 2021-04-20 15:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing the error. (210.20 KB, image/png)
2021-04-20 03:54 UTC, Kishore Gopalakrishnan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2021-04-20 03:54:00 UTC
Created attachment 137721 [details]
Screenshot showing the error.

SUMMARY
If we open a file in an svn repo, Kate complains about not being able to find a .git file.

STEPS TO REPRODUCE:
1. Checkout any svn repo (eg. `svn co svn://anonsvn.kde.org/home/kde/trunk/l10n-kf5/en_GB/messages/dolphin` )
2. Open any text file in the repo with Kate

OBSERVED RESULTS
The Kate window opens with the 'output' pane open, and complains (error message below; screenshot attached):

Git Error Failed to find .git directory, things may not work correctly: fatal: not a git repository (or any of the parent directories): .git

EXPECTED RESULTS
Kate should not detect svn repos as git repos.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Kernel Version: 5.10.31-1-lts
OS Type: 64-bit
Graphics Platform: X11

ADDITIONAL INFORMATION
Comment 1 Waqar Ahmed 2021-04-20 15:24:23 UTC
Git commit 42ce4852c25c8c8d8524316c6f1f915c835d8108 by Waqar Ahmed.
Committed on 20/04/2021 at 15:23.
Pushed by waqar into branch 'master'.

Downgrade .git not found warning to info message

Signed-off-by: Waqar Ahmed <waqar.17a@gmail.com>

M  +8    -1    addons/project/gitwidget.cpp

https://invent.kde.org/utilities/kate/commit/42ce4852c25c8c8d8524316c6f1f915c835d8108
Comment 2 Waqar Ahmed 2021-04-20 15:26:08 UTC
Git commit ae0bd0fd387145a4a44d2521e0b456f38b8d4ebe by Waqar Ahmed.
Committed on 20/04/2021 at 15:25.
Pushed by waqar into branch 'release/21.04'.

Downgrade .git not found warning to info message

Signed-off-by: Waqar Ahmed <waqar.17a@gmail.com>
(cherry picked from commit 42ce4852c25c8c8d8524316c6f1f915c835d8108)

M  +8    -1    addons/project/gitwidget.cpp

https://invent.kde.org/utilities/kate/commit/ae0bd0fd387145a4a44d2521e0b456f38b8d4ebe