Downgrade .git not found warning to info message

BUG: 435945

Signed-off-by: Waqar Ahmed <waqar.17a@gmail.com>
(cherry picked from commit 42ce4852c25c8c8d8524316c6f1f915c835d8108)